syntax = "proto3";

package jsmith.nknclient.network.proto;


message OutboundMessage {
    string dest = 1;
    bytes payload = 2;
    repeated string dests = 3;
    uint32 max_holding_seconds = 4;
}

message InboundMessage {
    string src = 1;
    bytes payload = 2;
}
